2008-11-08  Edgar Friendly  <thelema314@gmail.com>

	* src/core/extlib/extUTF8.ml*: added submodule [Byte] for byte-indexed access to UTF8 strings.  byte indexes are abstract so the type system will keep them separate from character indexes.  [nth], [first], [last]  now part of Byte

	* src/core/extlib/extUTF8.ml*: Lots of internal changes, fixes.  [contains], [contains_from], [rcontains_from], [rindex] added

	* src/core/extlib/rope.ml*: skeleton code for some string functions, but some implemented: [contains], [contains_from], [left], [right], [head], [tail], [lchop], [rchop], [splice], [fill], [blit], [concat_sep], [escaped], [replace_chars], [replace], [split], [nsplit]

2008-11-07  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml: [close_out] now recursively calls [close_out] of [out_upstream]

	* src/core/extlib/base64.ml: in [encode], added anonymous argument to [create_out]

	* src/core/extlib/IO.ml*: [wrap_out] created, [create_out] rewritten from [wrap_out]

	* src/core/extlib/IO.mli: [lmargin] removed

	* src/core/extlib/IO.ml: [pos_out] now doesn't [close] [out]

	* src/core/extlib/innerIO.ml: [output.out_upstream] added, [create_out] now accepts argument [underlying]

	* src/core/extlib/IO.ml*: when closing, [comb] now returns both accumulators
	
	* src/core/extlib/IO.ml*: added argument [underlying] to [create_out]

	* src/core/extlib/IO.ml*: [tab_out] now returns a [unit output], won't [flush] or [close]
	 underlying output

	* src/batteries_toolchain/top.ml: added [open Standard]

	* src/libs/camlzip/gZip.ml: tweaked error message

	* src/libs/camlzip/gZip.ml*: [with_in], [with_out] added

	* src/libs/common/compress.ml*: [with_in], [with_out] added

	* src/core/extlib/IO.ml: [write_enum] added

	* src/core/extlib/IO.ml: occurrences of [Enum.iter] replaced with [write_enum]

	* src/core/extlib/innerIO.ml: [close_out] now calls [flush]

	* src/core/extlib/innerIO.ml: [create_out] now won't automatically call [flush]
